2007-06-14  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclProc.c (TclObjInterpProcCore): simplified obj
	management in wrongNumArgs calls.
	
2007-06-14  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompile.c:	SetByteCodeFromAny() can no longer return
	* generic/tclExecute.c:	any code other than TCL_OK, so remove code
	* generic/tclProc.c:	that formerly handled exceptional codes.

2007-06-13  Miguel Sofer  <msofer@users.sf.net>
	
	* generic/tclExecute.c (TclCompEvalObj): missed update to "there
	is always a valid frame".

	* generic/tclProc.c (TclObjInterpProcCore): call TEBC directly
	instead of going through TclCompEvalObj - no need to check the
	compilation's freshness, this has already been done. This improves
	speed and should also provide some relief to [Bug 1066755].

2007-06-12  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclBasic.c (Tcl_CreateInterp): Turn the [info] command into
	* generic/tclCmdIL.c (TclInitInfoCmd):	 an ensemble, making it easier
	for third-party code to plug into.

	* generic/tclIndexObj.c (Tcl_WrongNumArgs): 
	* generic/tclNamesp.c, generic/tclInt.h (tclEnsembleCmdType): Make
	Tcl_WrongNumArgs do replacement correctly with ensembles and other
	sorts of complex replacement strategies.

2007-06-11  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c:  comments added to explain iPtr->numLevels
	management.

	* generic/tclNamesp.c:   tweaks to Tcl_GetCommandFromObj and
	* generic/tclObj.c:      TclGetNamespaceFromObj; modified the
	usage of structs ResolvedCmdName and ResolvedNsname so that the
	field refNsPtr is NULL for fully qualified names.

2007-06-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    Further TEOvI split, creating a new 
	* generic/tclCompile.h:  TclEvalObjvKnownCommand() function to  
	* generic/tclExecute.c:  handle commands that are already known
	and are not traced. INST_INVOKE now calls into this function